# pdf-rag

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  run_streamlit.sh
src/: app.py  build_chroma.py  rag_chain.py  retrieve_chroma.py  utils.py
src/cli/: contracts_cli.py
src/ui/: app.py
